--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <p>This is a collaboration effort between New South Wales Office Of Water and National ICT Australia.</p>
 <p>This is currently released as alpha for evaluation and feedback.</p>
 <p>
-  Further development is subject to industry and stakeholder needs. This system was built on top of the <a href="http://nationalmap.nicta.com.au/" target="_blank">NATIONAL MAP</a> platform.
+  Further development is subject to industry and stakeholder needs. This system was built on top of the <a href="http://www.nicta.com.au/category/industry-engagement/environment/projects/national-map/" target="_blank">TarriaJS</a> platform (NATIONAL MAP).
 </p>
 <p>
   E-mail any query to the NICTA Groundwater Team: <span class="white-space: nowrap;">groundwatervis&nbsp;at lists dot&nbsp;nicta dot com dot&nbsp;au</span>
