--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </div>
   <div id="menu">
     <!--   -->
-    <a onclick="$('#contents').load('changelog.html')">What&apos;s New</a>
-    <!--   -->
     <a onclick="$('#contents').load('about.html')">About</a>
+    <!--   -->
+    <a onclick="$('#contents').load('changelog.html')">What&apos;s New</a>
     <!--   -->
     <a onclick="$('#contents').load('demo.html')">Features</a>
     <!--   -->
@@ -30,7 +30,7 @@
   </div>
   <div id="contents"></div>
   <script type="text/javascript">
-      $('#contents').load('changelog.html')
+      $('#contents').load('about.html')
     </script>
   <div id="bottom">Copyright &copy; 2014 National ICT Australia</div>
 </body>
