--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,8 @@
 
 <h2>Features</h2>
 
-<h3>Explore static and time varying (hydro)stratigraphic models.</h3>
-<video class="demoVideo" controls preload="metadata" style="max-height: 700px;">
+<h3 class="link" onclick="$('.demoVideo').css('display', 'none'); $('#video2').css('display', 'block');">Explore static and time varying (hydro)stratigraphic models.</h3>
+<video  id="video2" class="demoVideo" controls preload="metadata" style="display: none;">
   <source src="videos/part2vid.webm" type="video/webm">
   <source src="videos/part2vid.mp4" type="video/mp4">
 </video>
@@ -10,9 +10,9 @@
 <br />
 <hr />
 <br />
-<h3>Explore bore information including stratigraphy, lithology and water level monitoring data.</h3>
+<h3 class="link" onclick="$('.demoVideo').css('display', 'none'); $('#video3').css('display', 'block');">Explore bore information including stratigraphy, lithology and water level monitoring data.</h3>
 
-<video class="demoVideo" controls preload="metadata" style="max-height: 700px;">
+<video  id="video3" class="demoVideo" controls preload="metadata" style="display: none;">
   <source src="videos/part3vid.webm" type="video/webm">
   <source src="videos/part3vid.mp4" type="video/mp4">
 </video>
@@ -21,8 +21,8 @@
 <hr />
 <br />
 
-<h3>Compare stratigraphic models with bore data.</h3>
-<video class="demoVideo" controls preload="metadata" style="max-height: 700px;">
+<h3 class="link" onclick="$('.demoVideo').css('display', 'none'); $('#video4').css('display', 'block');">Compare stratigraphic models with bore data.</h3>
+<video  id="video4" class="demoVideo" controls preload="metadata" style="display: none;">
   <source src="videos/part4vid.webm" type="video/webm">
   <source src="videos/part4vid.mp4" type="video/mp4">
 </video>
@@ -30,9 +30,9 @@
 <br />
 <hr />
 <br />
-<h3>Visualise a variety of open geospatial datasets.</h3>
+<h3 class="link" onclick="$('.demoVideo').css('display', 'none'); $('#video1').css('display', 'block');">Visualise a variety of open geospatial datasets.</h3>
 
-<video class="demoVideo" controls preload="metadata" style="max-height: 700px;">
+<video id="video1" class="demoVideo" controls preload="metadata" style="display: none;">
   <source src="videos/part1vid.webm" type="video/webm">
   <source src="videos/part1vid.mp4" type="video/mp4">
 </video>
